fix(grid): header is not visible in chrome

--- a/src/grid.module/index.styl
+++ b/src/grid.module/index.styl
@@ -20,7 +20,7 @@ $nz-cell-padding ?= nz-local-grid-size(2)
   box-sizing: border-box
   display: grid
   justify-content: stretch
-  flex-grow: 0
+  flex: none
   height: $nz-data-grid-header-height
 
 .nz-column
@@ -33,7 +33,6 @@ $nz-cell-padding ?= nz-local-grid-size(2)
   display: flex
   align-items: center
   user-select: none
-  flex: none
 
   padding: 0 $nz-cell-padding
   background-color: lighten($theme.foreground.default, 95%)
